# Arduino-Uno-Thermometer-Rust

./: Cargo.toml  README.md  avr-atmega328p.json
.cargo/: config.toml
Version_1/: avr-atmega328p.json
Version_1/src/: main.rs
src/: main.rs
