[package]
name = "arduino-uno-thermometer"
version = "0.1.0"
authors = ["Yuanyuan2100 <yuanyuan2100@gmail.com>"]
edition = "2021"

[dependencies]
panic-halt = "0.2.0"
hd44780-driver = {git = "https://github.com/JohnDoneth/hd44780-driver"}
numtoa = "0.2.3"
ufmt = "0.2.0"
nb = "1.1.0"
# arduino-hal = "0.1.0"
embedded-hal = "0.2.3"

[dependencies.heapless]
git = "https://github.com/yuanyuan2100/heapless.git"   #Added atmega328p to build.rs
rev = "82f658ee1ea8c984b4f2d38c904d0f277daf5f2d"

[dependencies.arduino-hal] # Set i2c functions to pub.
git = "https://github.com/yuanyuan2100/avr-hal.git"
rev = "fbb8495ea4504055f52cae47b9bd240892c5cd47"
features = ["arduino-uno"]

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"